# classroom-project-mlops-fraud-detection-use-case

./: .gitignore  README.md  debug_mlflow.py  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
data/raw/: transactions.csv.dvc
infrastructure/: Dockerfile.api  Dockerfile.train
model_storage/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  huey_consumer.py  pygrun
src/features/: feature_store.py  features.py
src/models/: train.py
src/monitoring/: drift.py
src/service/: app.py  schemas.py
src/utils/: generate_data.py
tests/: test_features.py
